# crypto-market-data-collector

./: .devcontainer.json  .gitignore  CMakeLists.txt  LICENSE  README.md
.PVS-Studio/State/: WindowState.json
build_tools/: Dockerfile  build_image.sh  build_project.sh  build_project_docker.sh  run_docker_builder.sh
config/: symbol_mapping.json
dependencies/nlohmann/: json.hpp
include/: bitfinex_market_data_subscriber.hpp  bitfinex_ws_subscriber.hpp  bitmex_authentication.hpp  bitmex_market_data_subscriber.hpp  bitmex_ws_subscriber.hpp  case_insensitive_string.hpp  coinbase_market_data_subscriber.hpp  coinbase_ws_subscriber.hpp  curl_wrapper.hpp  json_helpers.hpp  kraken_api.hpp  kraken_market_data_subscriber.hpp  kraken_order_book_subscriber.hpp  kraken_trades_subscriber.hpp  logger.hpp  market_data_common.hpp  market_data_provider.hpp  timestamp_parser.hpp  websocket_wrapper.hpp  ws_subscriber_base.hpp
src/: market_data_collector.cpp
